# OpenGTA

./: .clang-format  .gitignore  CMakeLists.txt  CMakeOptions.txt  CMakeUserPresets.json  ChangeLog.md  CompilerOptions.cmake  ConanInstall.bat  ai.cpp  blockanim.cpp  blockanim.h  blockdata.cpp  car-info.cpp  car-info.h  common_sdl_gl.cpp  common_sdl_gl.h  conan-install.sh  conanfile.py  conanfile.txt  config.h.in  datahelper.cpp  dataholder.cpp  dataholder.h  entity_controller.cpp  entity_controller.h  font.cpp  font.h  font_cache.cpp  font_cache.h  game_objects.cpp  game_objects.h  gfx_extract.cpp  gl_base.cpp  gl_base.h  gl_camera.cpp  gl_camera.h  gl_cityview.cpp  gl_cityview.h  gl_font.cpp  gl_font.h  (+39 more)
.github/workflows/: clean-build.yml  pre-release.yml  release.yml
cmake/: force-compiler-colors.cmake
coldet/: math3d.cpp  math3d.h
lua_addon/: CMakeLists.txt  lua.hpp  lua_camera.cpp  lua_camera.h  lua_cityview.h  lua_ini_bridge.cpp  lua_ini_bridge.h  lua_map.cpp  lua_map.h  lua_screen.cpp  lua_screen.h  lua_spritecache.cpp  lua_spritecache.h  lua_stackguard.cpp  lua_vm.cpp  lua_vm.h  lunar.h
math/: CMakeLists.txt  obox.cpp  plane.cpp
scripts/: dump_config.lua
tests/: CMakeLists.txt  bitwise-test.cpp  lua_map_test.cpp  menudemo.cpp
tools/: blockview.cpp  car_dump.cpp  display-font.cpp  display_font.cpp  display_slopes.cpp  font-dump.cpp  g24-dumper.cpp  mapinfo.cpp  minimap.cpp  obj-dump.cpp  obj_dump.cpp  spriteplayer.cpp
util/: CMakeLists.txt  animation.cpp  animation.h  bitwise.hpp  cell_iterator.cpp  cell_iterator.h  file_helper.cpp  file_helper.h  gui.cpp  gui.h  image_loader.cpp  image_loader.h  key_handler.cpp  log.cpp  log.h  m_exceptions.h  map_helper.cpp  map_helper.h  pf_tree.cpp  physfsrwops.h  set.cpp  set.h  sound_device.cpp  sound_device.h  sound_fx_cache.h  sound_music_player.h  sound_system.cpp  sound_system.h  timer.cpp
